Updated 'assets' to 'images' linking

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 }
 
 #canvas{
-    background-image: url(assets/wheel_back.png);
+    background-image: url(images/wheel_back.png);
     background-position: center;
     background-repeat: none; 
 }
