--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,4 +1,4 @@
-.switcher {
+.toggle {
   position: relative;
   width:200px;
   height:50px;
@@ -6,7 +6,7 @@
   margin:20px 0;
 }
 
-.switcher input{
+.toggle input{
   cursor: pointer;
   appearance: none;
   position: relative;
@@ -19,57 +19,56 @@
   font-size:16px;
 }
 
-span.switcher input:before, span.switcher input:after{
+span.toggle input:before, span.toggle input:after{
   position: absolute;
   top:50%;
   transform:translateY(-50%);
 }
 
-span.switcher input:before{
+span.toggle input:before{
   content: 'User';
   left:20px;
 }
 
-span.switcher input:after{
+span.toggle input:after{
   content: 'Admin';
   right:20px;
 }
 
-.switcher-1 input:not(:checked){
+.toggle input:not(:checked){
   background:#1E1E1E;
   transition: .5s .2s;
 }
 
-.switcher-1 input:not(:checked):hover{
+.toggle input:not(:checked):hover{
   box-shadow: 0 2px 25px rgba(30, 30, 30, 0.5);
 }
 
-.switcher-1 input:not(:checked):before{
+.toggle input:not(:checked):before{
   color: white;
   transition: color .5s;
 }
 
-.switcher-1 input:not(:checked):after{
+.toggle input:not(:checked):after{
   color: #1E1E1E;
   transition: color .5s .2s;
 }
 
-.switcher-1 input:checked{
+.toggle input:checked{
   background-color:#ff0081;
   transition: .5s .2s;
 }
 
-.switcher-1 input:checked:hover{
-  background-color:#eb0077;
+.toggle input:checked:hover{
   box-shadow: 0 2px 25px rgba(255, 0, 130, 0.5);
 }
 
-.switcher-1 input:checked:before{
+.toggle input:checked:before{
   color:#ff0081;
   transition: color .5s .2s;
 }
 
-.switcher-1 input:checked:after{
+.toggle input:checked:after{
   color:white;
   transition: color .5s .2s;
 }
