--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
     border:3px solid blue !important;
 }
 
-#Main h1, .switcher input, #Wheel, #Prize, #Controls .container{
+#Main h1, .toggle input, #Wheel, #Prize, #Controls .container{
     border:3px solid green !important;
 } */
 
