--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,3 @@
-/* Debugging Borders */
-/* #Main, #Main p, .the_wheel, #Outcome, #Prize label, #Spin_Button, #Controls button{
-    border:5px solid red !important;
-}
-
-#MainTitle, #canvas, #Controls{
-    border:3px solid blue !important;
-}
-
-#Main h1, .toggle input, #Wheel, #Prize, #Controls .container{
-    border:3px solid green !important;
-} */
-
-
-
-
 /* CSS Starts Here */
 /* Header */
 #Main{
@@ -55,10 +39,14 @@
 }
 /*  */
 
-/* Controls */
+/* Controls - Buttons */
 #Controls{
     border-radius: 50px;
     transition: .5s .2s;
+}
+
+#Controls .container{
+    user-Select:none;
 }
 
 #Prize{
@@ -77,10 +65,6 @@
     line-height:0;
 }
 
-.invisible{
-    display: none;
-}
-
 .spin{
     background-color: #0062FF;
     box-shadow: 0 2px 25px rgba(0, 98, 255, 0.5);
@@ -89,7 +73,6 @@
     background-color: #0033FF;
     box-shadow: 0 2px 25px rgba(0, 51, 255, 0.5);
 }
-/* eb0077 */
 
 .reset{
     background-color: #FF6600;
@@ -125,5 +108,11 @@
 .clickable
 {
     cursor: pointer;
+}
+/*  */
+
+/* Universe  class*/
+.invisible{
+    display: none;
 }
 /*  */
