--- a/styles/settings.css
+++ b/styles/settings.css
@@ -5,9 +5,15 @@
 
     position:fixed;
     height:100%;
-    width:330px;
     right:0px;
     bottom:0px;
+    transition: 1s;
+}
+.width330px{
+    width:330px;
+}
+.width90px{
+    width:90px;
 }
 
 /* Floating Action Button(FAB) */
