--- a/styles/debugging.css
+++ b/styles/debugging.css
@@ -15,7 +15,7 @@
 
 
 /* Settings */
-#AdminSettings, #AdminSettings .content{
+/* #AdminSettings, #AdminSettings .content{
     border:3px solid red !important;
 }
 #AdminControls, #FAB .icon, #FAB span, #ContentButtonsContainer .button,  #AdminSettings .header h2{
@@ -23,4 +23,4 @@
 }
 #FAB, #AdminSettings .header,  #AdminSettings .content div{
     border:3px solid green !important;
-}
+} */
